fix(chrome v71.0.3+): vertical alignment issue when nested in other components

--- a/src/client/styles/main/host.scss
+++ b/src/client/styles/main/host.scss
@@ -2,7 +2,7 @@
  * HOST
  *******/
 :host {
-	contain: content;
+	contain: paint style; // layout causes vertical alignment issue in chrome v71.0.3+
 	display: inline-block;
 }
 :host([hidden]) {
